fix: override iOS WebKit appearance for datetime-local inputs to fix styling/overflow

--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,27 @@ input.glass-input, select.glass-input {
   max-width: 100%;
 }
 
+input[type="date"].glass-input,
+input[type="datetime-local"].glass-input {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+}
+
+input[type="date"].glass-input::-webkit-datetime-edit,
+input[type="datetime-local"].glass-input::-webkit-datetime-edit {
+  display: flex;
+  padding: 0;
+}
+
+input[type="date"].glass-input::-webkit-date-and-time-value,
+input[type="datetime-local"].glass-input::-webkit-date-and-time-value {
+  margin: 0;
+  padding: 0;
+  min-height: 1.5em;
+  text-align: left;
+}
+
 select.glass-input {
   appearance: none;
   -webkit-appearance: none;
